--- a/css/style.css
+++ b/css/style.css
@@ -1,51 +1,159 @@
-*{
+* {
     margin: 0;
     padding: 0;
-}
+  }
 
-body{
-    flex-direction: column; 
-    align-items: center;
-}
+body {
+    font-family: "Roboto", sans-serif;
+    overflow-x: hidden;
+ }
 
-video {
-    max-width: 70%;
-}
-
-.nav{
-    position: fixed;
-    justify-content: left;
-    align-items: center;
-    top: 0;
-    width: 100%;
-    height: 60px;
-    background-color: #FC819E;
-}
-
-.nav ul {
-    margin: 0;
-    padding: 0;
+ /*navbar*/
+nav {
     display: flex;
-    list-style-type: none;
+    background-color: #FC819E;
+    justify-content: space-around;
+    /* padding: 20px 0; atas bawah 20  kiri kanan 0 */
+    /* atur padding dengan flex */
+    height: 45px;
     align-items: center;
-    justify-content: center;
+    color: whitesmoke;
 }
 
-.nav ul li{
-    display: inline-block;
-    margin-right: 20px;
-    line-height: 60px;
+nav ul {
+    display: flex;
+    list-style: none;
+    width: 40%;
+    justify-content: space-between;
+    transition: all 0.4s;
 }
 
-.nav ul li a{
-    color: #FFF3C7;
+nav .logo {
+    font-family: "Srisakdi", cursive;
+    letter-spacing: 3px; /*space antar char*/
+}
+  
+nav ul li a {
     text-decoration: none;
-    padding: 10px 0;
+    color: white;
+    font-size: 0.9rem;
 }
-
-.nav ul li a:hover{
+  
+nav ul li a:hover {
     color: black;
 }
+
+/* hamburger menu */
+.menu-toggle{
+      display: none; 
+      flex-direction: column;
+      height: 17px;
+      justify-content: space-between;
+      position: relative;
+}
+   .menu-toggle input{
+       position: absolute;
+       top:-5px;
+       left:-3px;
+       width:21px;
+       height: 21px;
+       opacity: 0;
+       cursor: pointer;
+       z-index: 2;
+   }
+   .menu-toggle span{
+       display: block;
+       width: 21px;
+       height: 2px;
+       background-color: whitesmoke;
+       border-radius: 3px;
+       transition: all 0.7s;
+   }
+  
+     /*x on hamburger menu*/
+     .menu-toggle span:nth-child(2){
+      transform-origin: left center;
+    }
+    
+    .menu-toggle span:nth-child(4){
+      transform-origin: left center;
+    }
+    
+    .menu-toggle input:checked ~ span:nth-child(2){
+      transform: rotate(45deg) ;
+    }
+    
+    .menu-toggle input:checked ~ span:nth-child(4){
+      transform: rotate(-45deg) ;
+    }
+    /* invis span ke 2 / child ke 3 */
+    .menu-toggle input:checked ~ span:nth-child(3){
+      width: 0%;
+      opacity: 50;
+      transition: .1s
+    }
+  
+  .image {
+    width: 100%;
+    height: auto;  
+    max-width: 140px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  main {
+      display: flex;
+      flex-direction: row;
+  }
+  
+  .box {
+      margin: 5px;
+      padding: 10px;
+      border-radius: 5px;
+  }
+
+  /* supaya ada jarak antar box  */
+.flexone{
+  flex-grow: 1;
+}
+.flextwo{
+    flex-grow: 2;
+}
+  
+  @media screen and (max-width: 768px) {
+      nav ul{
+        width: 50%;
+      }
+  }
+  
+  @media screen and (max-width: 576px) {
+     .menu-toggle{
+         display: flex;
+     }
+     main{
+         flex-direction: column-reverse;
+     }
+      nav ul{
+        position: absolute;
+        right:0;
+        top: 0;
+        width: 50%;
+        flex-direction: column;
+        height: 100vh;
+        justify-content:space-evenly;
+        align-items: center;
+        background-color: #FC819E;
+        /* transform: translateX(100%);  */
+        transition: all 0.72s;
+        opacity: 0;
+        z-index: 2;
+      }
+      nav ul.menushow{
+          opacity: 0.5;
+          /* transform: translateX(0); */
+      }
+    }
 
 .nav ul li.logo {
     margin-right: auto; 
@@ -74,12 +182,6 @@ video {
     margin-top: 10px;
     font-size: 16px;
     text-align: justify;
-}
-
-.center {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
 }
 
 strong{
@@ -127,6 +229,7 @@ h2{
 }
 
 h3{
+    font-weight: normal;
     text-align: center;
     padding: 10px;
 }
@@ -156,30 +259,52 @@ hr{
 }
 
 .kiri{
-    padding: 30px;
+    padding: 20px;
     border-radius: 50px;
     margin: 20px 0;
-    width: 100%;
+    width: 45%;
     float: left;
     background-color: #FEC7B4;
     text-align: center;
     box-sizing: border-box;
 }
 
-cover{
-    padding: 10px;
-    border-radius: 30px;
-    width: 90%;
-    height: auto;
+.kanan{
+    padding: 20px;
+    border-radius: 50px;
+    margin: 20px 0;
+    width: 45%;
+    float: right;
+    background-color: #FEC7B4;
+    text-align: center;
+    box-sizing: border-box;
 }
 
 img{
     padding: 10px;
     border-radius: 30px;
     display: block;
-    max-width: 50%;
+    width: 250px;
+    max-width: 80%;
     height: auto;
     margin: auto;
+}
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.special-image {
+    padding-top: 5%;
+    width: 80%;
+    height: auto; 
+}
+
+.galeri{
+    width: 500px;
+    max-width: 80%;
 }
 
 .video-container {
