--- a/css/style.css
+++ b/css/style.css
@@ -167,10 +167,10 @@ nav ul li a:hover {
 
 .container{
     width: 80%;
-    margin: 100px auto;
+    margin: 5%;
     padding: 20px;
     background-color: #FFF3C7;
-    border-radius: 50px;
+    border-radius: 10px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
@@ -219,6 +219,7 @@ li{
 }
 
 h1{
+    margin: 5%;
     color: #333;
     font-size: 45px;
 }
