--- a/css/style.css
+++ b/css/style.css
@@ -167,8 +167,8 @@ nav ul li a:hover {
 
 .container{
     width: 80%;
+    padding: 5%;
     margin: 5%;
-    padding: 20px;
     background-color: #FFF3C7;
     border-radius: 10px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -182,10 +182,6 @@ nav ul li a:hover {
     margin-top: 10px;
     font-size: 16px;
     text-align: justify;
-}
-
-strong{
-    font-weight: bold;
 }
 
 em{
@@ -219,9 +215,9 @@ li{
 }
 
 h1{
-    margin: 5%;
     color: #333;
     font-size: 45px;
+    padding-bottom: 5%;
 }
 
 h2{
